<resources>
    <string name="app_name">Newsapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Newyork">Newyork</string>
    <string name="BBC">BBC</string>
    <string name="CNN">CNN</string>
    <string name="Aljerza">Aljerza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Aljazeera">ALJAZEERA</string>
    <string name="ALJAZEERA">ALJAZEERA</string>
    <string name="FOXNEWS">FOXNEWS</string>
    <string name="NEWYORK">NEWYORK</string>
    <string name="Skynews">skynews</string>
    <string name="SKYNEWS">SKYNEWS</string>
    <string name="b1">Button</string>
</resources>