<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/BBC" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/CNN" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="ALJAZEERA" />
        <item
            android:id="@+id/foxnews"
            android:title="FOXNEWS">

        </item>
        <item
            android:id="@+id/skynews"
            android:title="@string/SKYNEWS">
        </item>
    </group>

    <item android:title="upcoming">
        <menu>
            <item
                android:id="@+id/newyor"
                android:title="@string/NEWYORK">

            </item>
        </menu>
    </item>

</menu>

